# MirrorC

./: .gitignore  CMakeLists.txt  Makefile  main.c  readme.md
src/: common.h  file_copier  globals.c  globals.h  main.c  progress.c  progress.h  queue.c  queue.h  traverse.c  traverse.h  vfs_copy.c  vfs_copy.h  worker.c  worker.h
